--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "ajv": "^6.5.2",
     "bluebird": "^3.5.1",
+    "commander": "^2.17.1",
     "lodash": "^4.17.4",
     "moment": "^2.22.2",
     "mongoose": "^5.2.3",
